# Fin_GPU

./: .gitignore  American_option.py  LICENSE  Longstaff Schwartz_OpenCL_v5.0.ipynb  Longstaff Schwartz_OpenCL_v5.1_test on matrix inverse.ipynb  PSO-Monte Carlo GBM Option Pricing_v3-GPU optimized.ipynb  PSO-Monte Carlo GBM Option Pricing_v3.1-GPU optimized-extensive collection.ipynb  README.md  config.txt  psoOption_design.xlsx
.github/workflows/: codeql.yml
.ipynb_checkpoints/: PSO-Monte Carlo GBM Option Pricing_v3-GPU optimized-checkpoint.ipynb
Data/: AugSpx.xls  March 2020 results.docx  March2020.csv  March2020.xlsx  March2020_10000Fish.xlsx  Sep2008 results.docx  Sep2008.xlsx  Spx_imv_results_withtime.csv  data description.docx  sep2008.csv  test.xlsx  text.csv
design/: Longstaff_Schwartz.xlsx  analysis.xlsx
models/: mc.py
models/kernels/: knl_source_pso_searchGrid.c
src/: American_option.ipynb  American_option.py  Analysis.ipynb  PSO_function_wise_compare.ipynb  run_Port.py
src/.ipynb_checkpoints/: American_option-checkpoint.ipynb  Analysis-checkpoint.ipynb
src/models/: benchmarks.py  longstaff.py  mc.py  pso.py  utils.py
src/models/kernels/: CMakeLists.txt  knl_source_pso_computeCosts.c  knl_src_pre_calc_ClassicAdjoint.c  knl_src_pre_calc_GaussJordan.c
